@@ -19,8 +19,8 @@ public class DepartmentsTest {
      */
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/k2"); //Arrays.asList("k1/sk1");
+        List<String> expect = List.of("k1", "k1/k2"); //Arrays.asList("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -30,8 +30,8 @@ public class DepartmentsTest {
      */
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1"); //Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1"); //Arrays.asList("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -41,7 +41,7 @@ public class DepartmentsTest {
      */
     @Test
     public void whenSortAscending() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(//Arrays.asList(
                 "k2/sk1",
                 "k1/sk1/ssk2",
                 "k2",
@@ -52,7 +52,7 @@ public class DepartmentsTest {
                 "k1/sk2",
                 "k1/sk1/ssk1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(//Arrays.asList(
                 "k1",
                 "k1/sk1",
                 "k1/sk1/ssk1",
@@ -83,7 +83,7 @@ public class DepartmentsTest {
                 "k2/sk1/ssk1",
                 "k2/sk1/ssk2"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(//Arrays.asList(
                 "k2",
                 "k2/sk1",
                 "k2/sk1/ssk1",
